--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "intl.extract": "MESSAGE_DIR='./.messages' react-scripts build",
+    "intl.extract": "MESSAGE_DIR='src/locale/.extracted' react-scripts build",
     "intl.manageTranslations": "node ./scripts/translation-runner.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "babelMacros": {
+    "react-intl": {
+      "verbose": true
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
